--- a/PositionsLabb.Api/PositionsLabb.Api.csproj
+++ b/PositionsLabb.Api/PositionsLabb.Api.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PositionsLabb.Data\PositionsLabb.Data.csproj" />
+  </ItemGroup>
+
 </Project>
